Demand Navigator/src/objects/Planning_Version__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Planning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Planning Version</label>
        <referenceTo>Additional_Planning_Versions__c</referenceTo>
        <relationshipName>Planning_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Entry_Closed_Date__c</fullName>
        <label>Data Entry Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Entry_Start_Date__c</fullName>
        <label>Data Entry Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Planning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year Planning</label>
        <referenceTo>Fiscal_Year_Planning__c</referenceTo>
        <relationshipName>Planning_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gap_Planning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gap Planning Version</label>
        <referenceTo>Gap_Planning_Version__c</referenceTo>
        <relationshipLabel>FCST Planning Versions</relationshipLabel>
        <relationshipName>FCST_Planning_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Budget_Planning_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this a Budget Planning Version?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Gap_Planning_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this a Gap Planning Version?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MonthName__c</fullName>
        <label>MonthName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Version_Current_Period__c</fullName>
        <label>Planning Version Current Period</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Version_Description__c</fullName>
        <label>Planning Version Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Planning_Version_Fiscal_Year__c</fullName>
        <label>Planning Version Fiscal Year</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Source__c</fullName>
        <label>Record Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SequenceNo__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Closed_Date__c</fullName>
        <label>Status Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Version_Status__c</fullName>
        <label>Version Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Open</fullName>
                </value>
                <value>
                    <fullName>Open (Admin)</fullName>
                </value>
                <value>
                    <fullName>Open (User)</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FCST Planning Version</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Data_Entry_Closed_Date__c</columns>
        <columns>Data_Entry_Start_Date__c</columns>
        <columns>Planning_Version_Current_Period__c</columns>
        <columns>Planning_Version_Fiscal_Year__c</columns>
        <columns>Is_this_a_Budget_Planning_Version__c</columns>
        <columns>Is_this_a_Gap_Planning_Version__c</columns>
        <columns>Fiscal_Year_Planning__c</columns>
        <columns>SequenceNo__c</columns>
        <columns>MonthName__c</columns>
        <columns>Record_Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Planning Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FCST Planning Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_update_after_closed</fullName>
        <active>true</active>
        <description>If planning version is closed  then if somebody trying to change data entries start date and end date manually.</description>
        <errorConditionFormula>AND(
    ISPICKVAL(Version_Status__c , &apos;Closed&apos;),
    OR(
       ISCHANGED( Data_Entry_Start_Date__c ),
       ISCHANGED( Data_Entry_Closed_Date__c )
    )
)</errorConditionFormula>
        <errorMessage>you can not change version date with closed version status</errorMessage>
    </validationRules>
</CustomObject>